--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <div class="Flag">
             <div class="top"></div>
             <div class="middle">
-                <img id="ashok" style="height: 80px;" src="/ashoka-chakra-png-transparent-image-0.webp" alt="">
+                <img id="ashok" style="height: 80px;" src="/ashoka-chakra-png-transparent-image-0.webp" alt="ashok chakra">
             </div>
             <div class="bottom"></div>
         </div>
